[package]
name = "rustyz"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.6"
image = "0.24.4"
log = "0.4.17"
num-format = "0.4"
num-traits = "0.2"
rand = "0.8"
regex = "1.5"
reqwest = {version = "0.11", features = ["brotli", "gzip", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.85"
serenity = {version = "0.11", default-features = false, features = ["absolute_ratelimits", "builder", "cache", "client", "gateway", "model", "utils", "rustls_backend"]}
sqlx = {version = "0.6.2", default-features = false, features = ["chrono", "decimal", "json", "offline", "runtime-tokio-rustls", "macros", "postgres"]}
tokio = {version = "1.24.2", features = ["process", "signal"]}
toml = "0.5"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
