[package]
name = "rustyz"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2024"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.37", default-features = false, features = ["serde"]}
chrono-tz = {version = "0.8.6", default-features = false}
futures = "0.3.30"
image = "0.25.1"
log = "0.4.21"
num-format = "0.4"
num-traits = "0.2"
rand = "0.8"
regex = "1.10"
reqwest = {version = "0.12", features = ["brotli", "gzip", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serenity = {version = "0.12.4", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "voice"]}
# songbird = {version = "0.4.0", features = ["gateway", "serenity", "rustls"]}
sqlx = {version = "0.8.6", default-features = false, features = ["chrono", "rust_decimal", "json", "runtime-tokio-rustls", "macros", "postgres"]}
tokio = {version = "1.37.0", features = ["process", "rt-multi-thread", "signal"]}
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
