[package]
name = "rustyz"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2024"
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.44", default-features = false, features = ["serde"]}
chrono-tz = {version = "0.8.6", default-features = false}
futures = "0.3.32"
image = "0.25.10"
log = "0.4.29"
num-format = "0.4"
num-traits = "0.2"
rand = "0.8"
regex = "1.12"
reqwest = {version = "0.12", features = ["brotli", "gzip", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serenity = {version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "voice"]}
# songbird = {version = "0.4.0", features = ["gateway", "serenity", "rustls"]}
sqlx = {version = "0.8.6", default-features = false, features = ["chrono", "rust_decimal", "json", "runtime-tokio-rustls", "macros", "postgres"]}
tokio = {version = "1.50.0", features = ["process", "rt-multi-thread", "signal"]}
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
